--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,4 +14,11 @@ FRONTEND_ORIGIN=https://krumova0elmira0mamedovna.ru
 TELEGRAM_BOT_TOKEN=8507943123:AAEqOfhYv36vAfcP7EZj3ghPS_izf6w9cPE
 TELEGRAM_CHAT_ID=5925365670
 
+# Почта для отправки кодов (регистрация, сброс пароля)
+MAIL_HOST=smtp.mail.ru
+MAIL_PORT=587
+MAIL_USER=krumova.service@mail.ru   
+MAIL_PASSWORD=Sasha2020!
+MAIL_FROM=krumova.service@mail.ru
+
 # При 413 на загрузке файлов в nginx добавьте: client_max_body_size 12m;
